--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,17 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+.text-start-css > * {
+  text-align: start !important;
+}
+@media (min-width: 1024px) {
+  .lg-webkit-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+}
 /* 
 html body {
   overflow-y: overlay;
