--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,7 +112,7 @@ body {
 
 .custom-bullet.swiper-pagination-bullet-active {
   width: 20px;
-  background-color: #d51921;
+  background-color: #f6ab35;
   opacity: 1;
 }
 .underline-animate {
