--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,18 @@
 .text-start-css > * {
   text-align: start !important;
 }
-
+.font {
+  font-family: "Kanit", sans-serif !important;
+}
+.font > * {
+  font-family: "Kanit", sans-serif !important;
+}
+.font > span {
+  font-family: "Kanit", sans-serif !important;
+}
+.font > p {
+  font-family: "Kanit", sans-serif !important;
+}
 @media (max-width: 500px) {
   .custom-select > * {
     display: block !important;
@@ -30,7 +41,24 @@ img {
     overflow: hidden;
   }
 }
-
+h1 {
+  @apply text-4xl font-bold;
+}
+h2 {
+  @apply text-3xl font-semibold;
+}
+h3 {
+  @apply text-2xl font-semibold;
+}
+h4 {
+  @apply text-xl font-medium;
+}
+h5 {
+  @apply text-lg font-medium;
+}
+h6 {
+  @apply text-base font-medium;
+}
 body {
   color: #212529;
 }
