--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,6 +56,8 @@ img {
 }
 .custom-img * {
   object-fit: contain !important;
+  width: auto !important;
+  height: auto !important;
 }
 strong,
 b,
