--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,6 +51,10 @@ img {
   font-size: 18px;
   font-weight: 300;
 }
+ul {
+  padding-left: 40px; /* hoặc nhiều hơn nếu bạn muốn rõ tab */
+}
+
 img {
   object-fit: cover;
 }
